--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
         "psr-4": {
             "Loja\\WebIII\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
     }
 }
